<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_details"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:id="@+id/detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <Button
        android:id="@+id/to_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_map_button" />

    <Button
        android:id="@+id/to_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_chat_button" />

</LinearLayout>